@@ -2753,7 +2753,8 @@
 		      <property name="enable_search">True</property>
 		      <signal name="button_release_event" handler="fill_id3_songs_tree" last_modification_time="Sat, 01 Nov 2003 22:47:11 GMT"/>
 		      <signal name="button_press_event" handler="file_browser_mouse_event" last_modification_time="Sat, 01 Nov 2003 22:39:49 GMT"/>
-		      <signal name="row_activated" handler="fill_id3_songs_tree" last_modification_time="Fri, 23 Jan 2004 14:11:41 GMT"/>
+		      <signal name="row_activated" handler="add_song_id3_browser" last_modification_time="Sun, 09 May 2004 12:03:35 GMT"/>
+		      <signal name="cursor_changed" handler="fill_id3_songs_tree" last_modification_time="Sun, 09 May 2004 11:56:47 GMT"/>
 		    </widget>
 		  </child>
 		</widget>
@@ -2782,6 +2783,7 @@
 		      <property name="reorderable">False</property>
 		      <property name="enable_search">True</property>
 		      <signal name="button_press_event" handler="file_browser_mouse_event" last_modification_time="Sat, 01 Nov 2003 22:15:48 GMT"/>
+		      <signal name="row_activated" handler="add_song_id3_browser" last_modification_time="Sun, 09 May 2004 12:11:11 GMT"/>
 		    </widget>
 		  </child>
 		</widget>
@@ -3038,7 +3040,7 @@
       <child>
 	<widget class="GtkLabel" id="label21">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">ID_3 Song Browser</property>
+	  <property name="label" translatable="yes">Song Tag Browser</property>
 	  <property name="use_underline">True</property>
 	  <property name="use_markup">False</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -3269,6 +3271,7 @@
 		  <property name="reorderable">False</property>
 		  <property name="enable_search">True</property>
 		  <signal name="button_press_event" handler="file_browser_mouse_event" last_modification_time="Fri, 23 Jan 2004 15:20:56 GMT"/>
+		  <signal name="row_activated" handler="add_selected_search" last_modification_time="Sun, 09 May 2004 12:12:03 GMT"/>
 		</widget>
 	      </child>
 	    </widget>
@@ -4342,7 +4345,7 @@
       <signal name="activate" handler="play_song" last_modification_time="Sun, 25 Jan 2004 16:59:44 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image41">
+	<widget class="GtkImage" id="image50">
 	  <property name="visible">True</property>
 	  <property name="pixbuf">media-play.png</property>
 	  <property name="xalign">0.5</property>
@@ -4362,7 +4365,7 @@
       <signal name="activate" handler="stop_song" last_modification_time="Sun, 25 Jan 2004 16:59:44 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image42">
+	<widget class="GtkImage" id="image51">
 	  <property name="visible">True</property>
 	  <property name="pixbuf">media-stop.png</property>
 	  <property name="xalign">0.5</property>
@@ -4382,7 +4385,7 @@
       <signal name="activate" handler="next_song" last_modification_time="Sun, 25 Jan 2004 16:59:44 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image43">
+	<widget class="GtkImage" id="image52">
 	  <property name="visible">True</property>
 	  <property name="pixbuf">media-next.png</property>
 	  <property name="xalign">0.5</property>
@@ -4402,7 +4405,7 @@
       <signal name="activate" handler="prev_song" last_modification_time="Sun, 25 Jan 2004 16:59:44 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image44">
+	<widget class="GtkImage" id="image53">
 	  <property name="visible">True</property>
 	  <property name="pixbuf">media-prev.png</property>
 	  <property name="xalign">0.5</property>
@@ -4415,13 +4418,13 @@
   </child>
 
   <child>
-    <widget class="GtkSeparatorMenuItem" id="separator1">
+    <widget class="GtkMenuItem" id="separator1">
       <property name="visible">True</property>
     </widget>
   </child>
 
   <child>
-    <widget class="GtkMenuItem" id="playlist_manager1">
+    <widget class="GtkMenuItem" id="playlist_manager">
       <property name="visible">True</property>
       <property name="label" translatable="yes">_Playlist Manager</property>
       <property name="use_underline">True</property>
@@ -4430,7 +4433,7 @@
   </child>
 
   <child>
-    <widget class="GtkSeparatorMenuItem" id="separator2">
+    <widget class="GtkMenuItem" id="separator2">
       <property name="visible">True</property>
     </widget>
   </child>
